--- a/style.css
+++ b/style.css
@@ -1,36 +1,42 @@
-@import url('https://fonts.googleapis.com/css?family=Creepster&effect=fire-animation');
-:root{
-    padding: 0px;
-    margin: 0px;
+@import url("https://fonts.googleapis.com/css?family=Creepster&effect=fire-animation");
+:root {
+  padding: 0px;
+  margin: 0px;
 }
 
-body{
-    text-align: center;
-    display: inline-block;
+body {
+  text-align: center;
+  display: inline-block;
 }
 
-h1{
-    font-family: 'Creepster', cursive;
-    z-index: 2;
-    position: relative;
-    font-size: 3rem;
-    letter-spacing: .2rem;
-    font-weight: lighter;
+h1 {
+  font-family: "Creepster", cursive;
+  z-index: 2;
+  position: relative;
+  font-size: 3rem;
+  letter-spacing: 0.2rem;
+  font-weight: lighter;
 }
 
-img{
-    width: 100px;
-    height: 100px;
-    position: relative;
-    z-index: 1;
+img {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  z-index: 1;
 }
 
-div>button{
-    position: absolute;
-    border-radius: 50%;
-    background-color: red;
-    padding: 1rem;
-    color: whitesmoke;
-    font-family: 'Creeper', serif;
-    left: 200px;
+button {
+  position: absolute;
+  border-radius: 20%;
+  background-color: red;
+  color: whitesmoke;
+  font-family: "Creeper", serif;
+  cursor: pointer;
+  display: flex;
+  height: auto;
+  width: auto;
+  font-size: 18px;
+  cursor: pointer;
+  top: -0.01rem;
 }
+
