--- a/style.css
+++ b/style.css
@@ -1,56 +1,59 @@
 @import url("https://fonts.googleapis.com/css?family=Creepster&effect=fire-animation");
-:root {
-  padding: 0px;
-  margin: 0px;
+
+body, html {
+  height: 100%;
+  margin: auto;
+
 }
 
 body {
+  background-image: url("images/halloweenbackground.jpg");
+  min-height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
-  display: inline-block;  
+  z-index: 0;
 }
 
 h1 {
   font-family: "Creepster", cursive;
   z-index: 2;
-  position: relative;
-  font-size: 3rem;
-  letter-spacing: 0.2rem;
+  font-size: 50px;
+  letter-spacing: 0.2 rem;
   font-weight: lighter;
 }
 
-img.backgroundimage {
-    z-index: -1;
-    position: relative;
-}
-
-img {
-  width: 100px;
-  height: 100px;
-  position: relative;
-  z-index: 2;
-}
-
-
-button {
-  position: absolute;
-  border-radius: 20%;
-  background-color: red;
+h2 {
   color: whitesmoke;
-  font-family: "Creeper", serif;
-  cursor: pointer;
-  display: flex;
-  height: auto;
-  width: auto;
-  font-size: 18px;
-  cursor: pointer;
-  top: -0.01rem;
-  z-index: 2;
 }
 
-span {
-    color: whitesmoke;
-    font-size: 1.25rem;
-    font-family: 'Creeper', serif; 
-    z-index: 2;   
-    position: relative;
+.btn {
+  background-color: orangered;
+  color: white;
+  font-size: 16px;
+  border: 10px;
+  cursor: pointer;
+  position:absolute;
+  right: 50%;
+  bottom: 5%;
 }
+
+.btn:hover {
+  background-color: black;
+}
+
+/* letters */
+span {
+  color: whitesmoke;
+  font-size: 3vmin;
+  font-size: 4vmax;
+}
+
+/* coins */
+img {
+  width: 6vmin;
+  width: 8vmax;
+  height: auto;
+}
+
